<resources>
    <string name="app_name">Mantis Chat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">App Settings</string>
    <string name="main_desc">Welcome to the WhispWriting app. This suite is basically a mobile adaptation of the site that may work better than the actual mobile page.</string>
    <string name="lebutton">Standard Button</string>
    <string name="welcome_text">Welcome to Mantis Chat. Please login or register.</string>
    <string name="chat_main">Welcome to the chat page.</string>
    <string name="register">Create an Account</string>
    <string name="login">Returning Users</string>
    <string name="regTop">Create your account.</string>
    <string name="logTop">Enter your login details.</string>
    <string name="regPage">Create Account</string>
    <string name="logPage">Login</string>
    <string name="unameF">Name</string>
    <string name="emailTXT">Email</string>
    <string name="regBtn">Create Account</string>
    <string name="passwdField">Password</string>
    <string name="atotf">A Tale of Two Foxes</string>
    <string name="hello">Hello World, PdfViewerActivity!</string>
    <string name="logout">Logout</string>
    <string name="accountS">Account Settings</string>
    <string name="logBtn">Login</string>
    <string name="dispname">Display Name</string>
    <string name="bioText">No bio has been set.</string>
    <string name="changeN">Change Name</string>
    <string name="changeStatus">Change Status</string>
    <string name="changeImg">Change Image</string>
    <string name="newStatus">Enter your new status or bio</string>
    <string name="newName">Enter your new name</string>
    <string name="setStatus">Set Status</string>
    <string name="setUser">Set Name</string>
    <string name="accountList">Users List</string>
    <string name="userListName">Display Name</string>
    <string name="userListStatus">Status</string>
    <string name="friendRequestButton">Send Friend Request</string>
    <string name="declineFriendRequestBtn">Decline Friend Request</string>
    <string name="channelName">main</string>
    <string name="channelDescription">Main notification stream</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="start_level">start_level</string>
    <string name="next_level">next_level</string>
    <string name="interstitial_ad_sample">interstitial_ad_sample</string>
    <string name="messageBox">Message</string>
    <string name="defaultMessageText">message</string>
    <string name="searchBar">Search</string>
    <string name="received_image">received image</string>
    <string name="sent_image">sent image</string>
</resources>
